--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
         <title>HV Tech: Code Camp</title>
     </head>
     <body>
-    
+        <header>
+            <p style="font-size: 0.9rem;font-style: italic;">
+                <img style="display: block;" src="https://live.staticflickr.com/5521/31353283305_6ef4c2249e_b.jpg" alt="New York: sunset over Manhattan & Hudson River (from The Rock observation desk)">
+                    <a href="https://www.flickr.com/photos/129472585@N03/31353283305">"New York: sunset over Manhattan & Hudson River (from The Rock observation desk)"</a><span> by <a href="https://www.flickr.com/photos/129472585@N03">Traveller-Reini
+                    </a>
+                </span> is licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/2.0/?ref=ccsearch&atype=html" style="margin-right: 5px;">CC BY-NC-SA 2.0</a><a href="https://creativecommons.org/licenses/by-nc-sa/2.0/?ref=ccsearch&atype=html" target="_blank" rel="noopener noreferrer" style="display: inline-block;white-space: none;margin-top: 2px;margin-left: 3px;height: 22px !important;">
+                    <img style="height: inherit;margin-right: 3px;display: inline-block;" src="https://search.creativecommons.org/static/img/cc_icon.svg?image_id=d4ad8e6e-92b1-4c01-a202-e9f764a8c273" />
+                    <img style="height: inherit;margin-right: 3px;display: inline-block;" src="https://search.creativecommons.org/static/img/cc-by_icon.svg" />
+                    <img style="height: inherit;margin-right: 3px;display: inline-block;" src="https://search.creativecommons.org/static/img/cc-nc_icon.svg" />
+                    <img style="height: inherit;margin-right: 3px;display: inline-block;" src="https://search.creativecommons.org/static/img/cc-sa_icon.svg" />
+                </a>
+            </p>
+        </header>
     </body>
 </html>
