--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                     </span> is licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/2.0/?ref=ccsearch&atype=html" style="margin-right: 5px;">CC BY-NC-SA 2.0</a><a href="https://creativecommons.org/licenses/by-nc-sa/2.0/?ref=ccsearch&atype=html" target="_blank" rel="noopener noreferrer" style="display: inline-block;white-space: none;margin-top: 2px;margin-left: 3px;height: 22px !important;">
                     <img style="height: inherit;margin-right: 3px;display: inline-block;" src="https://search.creativecommons.org/static/img/cc_icon.svg?image_id=d4ad8e6e-92b1-4c01-a202-e9f764a8c273" />
                     <img style="height: inherit;margin-right: 3px;display: inline-block;color: black;" src="https://search.creativecommons.org/static/img/cc-by_icon.svg" />
-                    <img style="height: inherit;margin-right: 3px;display: inline-block;" src="https://search.creativecommons.org/static/img/cc-nc_icon.svg" />
-                    <img style="height: inherit;margin-right: 3px;display: inline-block;" src="https://search.creativecommons.org/static/img/cc-sa_icon.svg" />
+                    <img style="height: inherit;margin-right: 3px;display: inline-block;color: black;" src="https://search.creativecommons.org/static/img/cc-nc_icon.svg" />
+                    <img style="height: inherit;margin-right: 3px;display: inline-block;color: black;" src="https://search.creativecommons.org/static/img/cc-sa_icon.svg" />
                 </a>
             </p>
         </header>
