--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
     <body>
         <header>
             <p style="font-size: 0.9rem;font-style: italic;"><img style="display: block;" src="https://live.staticflickr.com/5551/14663811351_d546df0699_b.jpg" alt="Braided river. Canterbury NZ."><a href="https://www.flickr.com/photos/88123769@N02/14663811351">"Braided river. Canterbury NZ."</a><span> by <a href="https://www.flickr.com/photos/88123769@N02">Bernard Spragg</a></span> is licensed under <a href="https://creativecommons.org/licenses/cc0/1.0/?ref=ccsearch&atype=html" style="margin-right: 5px;">CC0 1.0</a><a href="https://creativecommons.org/licenses/cc0/1.0/?ref=ccsearch&atype=html" target="_blank" rel="noopener noreferrer" style="display: inline-block;white-space: none;margin-top: 2px;margin-left: 3px;height: 22px !important;"><img style="height: inherit;margin-right: 3px;display: inline-block;" src="https://search.creativecommons.org/static/img/cc_icon.svg?image_id=8242aa8e-c8b1-4244-a13b-d4f57bbdf48e" /><img style="height: inherit;margin-right: 3px;display: inline-block;" src="https://search.creativecommons.org/static/img/cc-cc0_icon.svg" /></a></p>
+            <h1 class="logo">HV Tech</h1>
+            <nav>
+                <ul>
+                    <li>Home</li>
+                    <li>Instructors</li>
+                    <li>Courses</li>
+                    <li>Sign Up</li>
+                    <li>Contact</li>
+                    <li>Login</li>
+                </ul>
+            </nav>
             <h1>HV Tech:</h1>
             <h2>Code Camp</h2>
         </header>
