--- a/index.html
+++ b/index.html
@@ -26,5 +26,20 @@
             <h1>HV Tech:</h1>
             <h2>Code Camp</h2>
         </header>
+        <section class="instructors">
+
+        </section>
+        <section class="courses">
+
+        </section>
+        <section class="signup">
+
+        </section>
+        <section class="contact">
+
+        </section>
+        <footer>
+            
+        </footer>
     </body>
 </html>
