--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 
         </section>
         <footer>
-            
+            <p>&copy; Copyright 2021 HV Tech</p>
+            <p>|</p>
         </footer>
     </body>
 </html>
