--- a/index.html
+++ b/index.html
@@ -36,7 +36,14 @@
 
         </section>
         <section class="contact">
-
+            <div class="contact-numbers">
+                <h4>Customer Service</h4>
+                <a href="tel:+5556795000">(845) 679-5000</a>
+                <h4>Billing</h4>
+                <a href="tel:+5556795100">(845) 679-5100</a>
+                <h4>Business Relations</h4>
+                <a href="tel:+5556795200">(845) 679-5200</a>
+            </div>
         </section>
         <footer>
             <p>&copy; Copyright 2021 HV Tech</p>
