--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         </section>
         <section class="signup">
-
+            <img class="full-width" src="https://upload.wikimedia.org/wikipedia/commons/6/65/Adult-coding-collaborate-1181472.jpg" alt="File:Adult-coding-collaborate-1181472.jpg">
         </section>
         <section class="contact">
             <div class="contact-numbers">
