--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <header>
-            <p style="font-size: 0.9rem;font-style: italic;"><img class="full-width" src="https://live.staticflickr.com/5551/14663811351_d546df0699_b.jpg" alt="Braided river. Canterbury NZ.">
+            <img class="full" src="https://live.staticflickr.com/5551/14663811351_d546df0699_b.jpg" alt="Braided river. Canterbury NZ.">
             <h1 class="logo">HV Tech</h1>
             <nav>
                 <ul>
@@ -33,7 +33,7 @@
 
         </section>
         <section class="signup">
-            <img class="full-width" src="https://upload.wikimedia.org/wikipedia/commons/6/65/Adult-coding-collaborate-1181472.jpg" alt="File:Adult-coding-collaborate-1181472.jpg">
+            <img class="full" src="https://upload.wikimedia.org/wikipedia/commons/6/65/Adult-coding-collaborate-1181472.jpg" alt="File:Adult-coding-collaborate-1181472.jpg">
         </section>
         <section class="contact">
             <div class="contact-numbers">
