--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <body>
         <header>
             <img class="full" src="https://live.staticflickr.com/5551/14663811351_d546df0699_b.jpg" alt="Braided river. Canterbury NZ.">
-            <h1 class="logo">HV Tech</h1>
+            <div class="logo">
+                <h1 class="logo-text">HV Tech</h1>
+            </div>      
             <nav>
                 <ul>
                     <li>Home</li>
