--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <header>
             <img class="full" src="https://live.staticflickr.com/5551/14663811351_d546df0699_b.jpg" alt="Braided river. Canterbury NZ.">
             <div class="logo">
-                <h1 class="logo-text">HV Tech</h1>
+                <h1>HV Tech</h1>
             </div>      
             <nav>
                 <ul>
