--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <header>
-            <img class="full" src="https://live.staticflickr.com/5551/14663811351_d546df0699_b.jpg" alt="Braided river. Canterbury NZ.">
+            <!--<img class="full" src="https://live.staticflickr.com/5551/14663811351_d546df0699_b.jpg" alt="Braided river. Canterbury NZ.">-->
             <div class="logo">
                 <h1>HV Tech</h1>
             </div>
