--- a/index.html
+++ b/index.html
@@ -10,46 +10,10 @@
         <title>HV Tech: Code Camp</title>
     </head>
     <body>
-        <header>
-            <img class="full" src="https://live.staticflickr.com/5551/14663811351_d546df0699_b.jpg" alt="Braided river. Canterbury NZ.">
-            <div class="logo">
-                <h1>HV Tech</h1>
-            </div>
-            <nav>
-                <ul>
-                    <li>Home</li>
-                    <li>Instructors</li>
-                    <li>Courses</li>
-                    <li>Sign Up</li>
-                    <li>Contact</li>
-                    <li>Login</li>
-                </ul>
-            </nav>
-            <h1>HV Tech:</h1>
-            <h2>Code Camp</h2>
-        </header>
-        <section class="instructors">
-
-        </section>
-        <section class="courses">
-
-        </section>
-        <section class="signup">
-            <img class="full" src="https://upload.wikimedia.org/wikipedia/commons/6/65/Adult-coding-collaborate-1181472.jpg" alt="File:Adult-coding-collaborate-1181472.jpg">
-        </section>
-        <section class="contact">
-            <div class="contact-numbers">
-                <h4>Customer Service</h4>
-                <a href="tel:+15556795000">(555) 679-5000</a>
-                <h4>Billing</h4>
-                <a href="tel:+15556795100">(555) 679-5100</a>
-                <h4>Business Relations</h4>
-                <a href="tel:+15556795200">(555) 679-5200</a>
-            </div>
-        </section>
+        <h1>Website under construction!</h1>
+        <h2>Please check back soon</h2>
         <footer>
             <p>&copy; Copyright 2021 HV Tech</p>
-            <p>|</p>
         </footer>
     </body>
 </html>
