--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
         <title>HV Tech: Code Camp - Under Construction</title>
     </head>
     <body>
-        <h1>Website under construction!</h1>
-        <h2>Please check back soon</h2>
+        <div class="box">
+            <h1>Website under construction!</h1>
+            <h2>Please check back soon</h2>
+        </div>
         <footer>
             <p>&copy; Copyright 2021 HV Tech</p>
         </footer>
