Final upload of website

--- a/index.html
+++ b/index.html
@@ -7,15 +7,119 @@
         <link rel="preconnect" href="https://fonts.gstatic.com"> 
         <link href="https://fonts.googleapis.com/css2?family=Lobster+Two:ital,wght@0,400;0,700;1,400;1,700&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">          
         <link rel="stylesheet" href="style.css">
-        <title>HV Tech: Code Camp - Under Construction</title>
+        <title>HV Tech: Code Camp</title>
     </head>
     <body>
-        <div class="box">
-            <h1>Website under construction!</h1>
-            <h2>Please check back soon</h2>
-        </div>
+        <header>
+            <img class="full" src="https://live.staticflickr.com/5551/14663811351_d546df0699_b.jpg" alt="Braided river. Canterbury NZ.">
+            <a href="index.html">
+                <div class="logo">
+                    <h1>HV Tech</h1>
+                </div>
+            </a>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="#instructors">Instructors</a></li>
+                    <li><a href="#courses">Courses</a></li>
+                    <li><a href="#signup">Sign Up</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="#">Login</a></li>
+                </ul>
+            </nav>
+            <div class="headline">
+                <h1>HV Tech:</h1>
+                <h2>Code Camp</h2>
+            </div>
+        </header>
+        <section id="instructors">
+            <h2>Qualified Instructors</h2>
+            <div class="flex">
+                <div class="flex-row">
+                    <div class="instructor-img">
+                        <img src="https://live.staticflickr.com/2454/32689636931_b2cf77c461_b.jpg" alt="Studio Headshot Business Portrait">
+                        <h3>Justyn</h3>
+                        <h4>HTML, CSS</h4>
+                    </div>
+                    <div class="instructor-img">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/1/10/Lindsay_Phillips_Headshot_September_2012.png" alt="Studio Headshot Business Portrait">
+                        <h3>Victoria</h3>
+                        <h4>Swift, Javascript</h4>
+                    </div>
+                    <div class="instructor-img">
+                        <img src="https://live.staticflickr.com/863/26355007567_9d0cc413e4.jpg" alt="Studio Headshot Business Portrait">
+                        <h3>Dan</h3>
+                        <h4>LAMP, ASP.NET</h4>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="courses">
+            <h2>Comprehensive Courses</h2>
+            <div class="flex">
+                <div class="flex-row">
+                    <div class="card">
+                        <h3>HTML</h3>
+                        <h6>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore neque nam voluptatem ullam? Consequuntur eligendi reiciendis ratione nam! Accusantium laudantium esse necessitatibus id sapiente unde reprehenderit illo error voluptatibus repellendus.</h6>
+                    </div>
+                    <div class="card">
+                        <h3>CSS</h3>
+                        <h6>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio ullam aut eius hic assumenda, nesciunt, vel cum voluptatum enim iure cupiditate! A assumenda adipisci omnis. Tempora autem doloribus expedita neque!</h6>
+                    </div>
+                    <div class="card">
+                        <h3>Javascript</h3>
+                        <h6>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad sapiente deleniti tempora cumque, neque harum. Quasi dicta neque molestias perferendis doloremque rem accusamus ab. Porro rerum a incidunt minima ad.</h6>
+                    </div>
+                </div>
+                <div class="flex-row">
+                    <div class="card">
+                        <h3>Swift</h3>
+                        <h6>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem, laudantium magnam necessitatibus, voluptatibus quos culpa modi eaque placeat excepturi accusamus, eos rerum sed quisquam porro sint deleniti sequi error vitae!</h6>
+                    </div>
+                    <div class="card">
+                        <h3>LAMP</h3>
+                        <h6>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus dolorem expedita deleniti odit placeat cupiditate, nostrum ea, modi cum quaerat maxime, inventore magnam iure et. Accusamus, aspernatur? Illum, officiis doloribus.</h6>
+                    </div>
+                    <div class="card">
+                        <h3>ASP.NET</h3>
+                        <h6>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod perferendis magnam quaerat earum ipsam rem incidunt fugit consectetur corporis sit recusandae nisi natus voluptatibus excepturi ut, dolorem veniam temporibus veritatis.</h6>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="signup">
+            <img class="full" src="https://upload.wikimedia.org/wikipedia/commons/6/65/Adult-coding-collaborate-1181472.jpg" alt="File:Adult-coding-collaborate-1181472.jpg">
+            <div class="flex">
+                <div class="flex-row">
+                    <div class="points">
+                        <h5>Subscription based pricing</h5>
+                        <h5>Content updated weekly</h5>
+                        <h5>Hassel free cancelation</h5>
+                        <h5>Based in the Hudson Valley</h5>
+                    </div>
+                    <a href="#" class="btn"><h3>Sign Up!</h3></a>
+                </div>
+            </div>
+        </section>
         <footer>
-            <p>&copy; Copyright 2021 HV Tech</p>
+            <div class="flex footer-img">
+                <h6>&copy; Copyright 2021 HV Tech</h6>
+                <div class="footer-img">
+                    <a href="http://facebook.com" target="_blank">
+                        <img src="img/iconfinder_square-facebook_317727.svg" alt="FaceBook">
+                    </a>
+                    <a href="http://www.linkedin.com" target="_blank">
+                        <img src="img/iconfinder_square-linkedin_317725.svg" alt="Linked In">
+                    </a>
+                    <a href="http://twitter.com" target="_blank">
+                        <img src="img/iconfinder_square-twitter_317723.svg" alt="Twitter">
+                    </a>
+                    <a href="http://youtube.com" target="_blank">
+                        <img src="img/iconfinder_youtube_v2_386762.svg" alt="YouTube">
+                    </a>
+                    
+                </div>
+            </div>
         </footer>
     </body>
 </html>
