--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         </section>
         <footer>
             <div class="flex footer-img">
-                <h6>&copy; Copyright 2021 HV Tech</h6>
+                <h6>&copy; Copyright 2021 HV Tech LLC.</h6>
                 <div class="footer-img">
                     <a href="http://facebook.com" target="_blank">
                         <img src="img/iconfinder_square-facebook_317727.svg" alt="FaceBook">
